# eib-seclending

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  impl-log.md  prespec-plan.md  pyproject.toml
outputs/tables/: appendix_outcomes.md  phase1_cohesion_summary.csv  phase1_holm_adjustment.csv  phase1_plausibility_check.csv  phase1_targeting_between.csv  phase1_targeting_between_robustness.csv  phase1_targeting_mundlak.csv  phase1_targeting_regression.csv  phase1_targeting_robustness.csv  phase1_variance_decomposition.csv  phase1_wild_bootstrap.csv  phase2b_bartik_iv.csv  phase2b_bhj_diagnostics.csv
src/: config.py
src/analysis/: add_cis_and_mde.py  bartik.py  bhj_diagnostics.py  build_dataset.py  cs_estimation.py  holm_adjustment.py  mundlak_gap_analysis.py  plausibility_check.py  targeting.py  targeting_between.py  targeting_between_robustness.py  targeting_mundlak.py  targeting_robustness.py  targeting_robustness_b3b4.py  variance_decomposition.py  wild_bootstrap_fast.py
src/ingest/: check1_deep_inspection.py  check1_inspection.py  check2_validation.py  check4_validation.py  check5_eurostat_json.py  check_geo_hints.py  cohesion.py  cohesion_from_eurostat.py  ecb_safe.py  eib_projects.py  eibis_aggregates.py  extract_bis_pdf.py  extract_safe_panel.py  extract_safe_q0b.py
src/viz/: between_scatter.py  descriptives.py
